jQuery and AJAX

--- a/03 jQuery and AJAX - Lab/list-of-items.html
+++ b/03 jQuery and AJAX - Lab/list-of-items.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>List of Items</title>
+    <script src="scripts/jquery-3.0.0.min.js"></script>
     <script src="scripts/list-of-items.js"></script>
 </head>
 <body>
