Creating a Book Library with HTML5, JavaScript & Kinvey
LIVE Demo Nakov

--- a/04 Creating a Book Library with HTML5, JavaScript and Kinvey - LIVE Demo/books.html
+++ b/04 Creating a Book Library with HTML5, JavaScript and Kinvey - LIVE Demo/books.html
@@ -62,7 +62,7 @@
         </section>
     </main>
     <footer>
-        (c) SoftUni - Creating a Book Library with HTML5, JavaScript and Kinvey
+        (c) SoftUni - Creating a Book Library with HTML5, JavaScript & Kinvey
     </footer>
 </body>
 </html>
